# analise-fii

./: .gitignore  AGENTS.md  Abrir FII Analytics.lnk  Atualizar Dados (Admin).lnk  CLAUDE.md  INVESTIGACAO_LOG.md  LANCAMENTO.md  PROJETO-completo.md  analise-fundo-prompt.md  compare_v2_v3.py  config.yaml  log-update.txt  plano UX.txt  plano-de-melhoria.md  pyproject.toml  test_import.py
.claude/: settings.json  settings.local.json
.claude/agents/: beta-tester-trader.md  (+8 more)
.gemini/: GEMINI.md
app/: state.py  streamlit_app.py
docs/: BETA_TESTER_REPORT.md  PLANO_EXPANSAO.md  PLANO_EXPANSAO_V2.md  PLANO_IMPLEMENTACAO_MOTOR_V2.md  PLANO_MOTOR_RECOMENDACAO_V2.md  PLANO_V4_ESTRATEGICO.md  PROJETO.md  STATUS_ATUAL.md  UX_AUDIT.md  V3_EVALUATION_LOG.md  VARIAVEIS_ANALISE_FII_BRASIL.md  VARIAVEIS_ANALISE_REITS_ADAPTACAO_FII.md
scripts/: _aceite  _aceite_v1_cdi.py  _aceite_v2_cdi.py  _aceite_v3_cdi.py  _patch_ativo_passivo.py  _patch_database.py  analise_janela_flexivel.py  analise_janela_v2.py  analise_spread_recompra.py  check_prices.py  compare_cvm_headers.py  daily_report.py  daily_update.py  diag_discarded.py  generate_daily_snapshots.py  load_database.py  plot_car.py  plot_car_adjusted.py  refresh_optimizer_cache.py  run_event_study.py  run_event_study_car_ajustado.py  run_strategy.py  run_tests.ps1  scrape_fundsexplorer.py  test_recommender.py  test_saude_score.py  validate_knip11.py
temp-analise/: analise_rbrr11.md
tests/: conftest.py  test_calculation.py  test_cli_smoke.py  test_decision.py  test_indicators.py  test_snapshot.py  test_walk_forward.py
(+88 files in other folders)
