[project]
name = "fii-analysis"
version = "0.1.0"
description = "Análise estatística de FIIs para apoio a decisões de investimento"
requires-python = ">=3.11"

dependencies = [
    # Banco de dados
    "sqlalchemy>=2.0",

    # Dados
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "python-dotenv>=1.0",

    # Estatística
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",

    # Qualidade
    "loguru>=0.7",

    # CLI
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
mcp = [
    "mcp>=1.1",
    "pydantic>=2.6",
]
web = [
    "flask>=3.0",
    "streamlit>=1.30",
    "plotly>=5.18",
]
ml = [
    "lightgbm>=4.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
